[gd_scene load_steps=3 format=3 uid="uid://btuev1y2eb6se"]

[ext_resource type="Script" uid="uid://bkjj04i1dy58a" path="res://studio/ui/parameter_panel/parameter_setting.gd" id="1_cjyog"]
[ext_resource type="Texture2D" uid="uid://ce5log3qg4jho" path="res://studio/ui/icons/delete-right.svg" id="2_ucxf0"]

[node name="Control" type="PanelContainer"]
size_flags_horizontal = 3
theme_type_variation = &"SubPanelContainer"
script = ExtResource("1_cjyog")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Name" type="LineEdit" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Parameter Name"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(48, 24)
layout_mode = 2
focus_mode = 0
icon = ExtResource("2_ucxf0")
flat = true
icon_alignment = 1
expand_icon = true

[node name="InputSelect" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Input"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Section"

[node name="Input" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="InputSource" type="LineEdit" parent="VBoxContainer/PanelContainer/Input"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "..."
editable = false
selecting_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/Input"]
layout_mode = 2

[node name="InputRangeLower" type="SpinBox" parent="VBoxContainer/PanelContainer/Input/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.01
alignment = 2

[node name="InputRangeUpper" type="SpinBox" parent="VBoxContainer/PanelContainer/Input/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.01
alignment = 2

[node name="InputRangeClamp" type="CheckButton" parent="VBoxContainer/PanelContainer/Input/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "clamp"

[node name="InputLevel" type="ProgressBar" parent="VBoxContainer/PanelContainer/Input"]
unique_name_in_owner = true
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
size_flags_vertical = 1
allow_greater = true
allow_lesser = true

[node name="OutputSelect" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Output"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Section"

[node name="Output" type="VBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="OutputTarget" type="LineEdit" parent="VBoxContainer/PanelContainer2/Output"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "..."
editable = false
selecting_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/Output"]
layout_mode = 2

[node name="OutputRangeLower" type="SpinBox" parent="VBoxContainer/PanelContainer2/Output/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.01
alignment = 2

[node name="OutputRangeUpper" type="SpinBox" parent="VBoxContainer/PanelContainer2/Output/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.01
alignment = 2

[node name="OutputRangeClamp" type="CheckButton" parent="VBoxContainer/PanelContainer2/Output/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
text = "clamp"

[node name="OutputLevel" type="ProgressBar" parent="VBoxContainer/PanelContainer2/Output"]
unique_name_in_owner = true
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
size_flags_vertical = 1
allow_greater = true
allow_lesser = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/Output"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer2/Output/VBoxContainer"]
layout_mode = 2
text = "Smoothing"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/Output/VBoxContainer"]
layout_mode = 2

[node name="Smoothing" type="HSlider" parent="VBoxContainer/PanelContainer2/Output/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SmoothingLabel" type="Label" parent="VBoxContainer/PanelContainer2/Output/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_type_variation = &"ValueLabel"
text = "50"
horizontal_alignment = 1
